# fula

./: Cargo.toml  README.md
compiler/: Cargo.toml
compiler/src/: hir.rs  infer.rs  lib.rs
compiler/src/hir/: convert.rs  gen.rs  infer.rs  mod.rs  node.rs  visit.rs
compiler/src/lir/: mod.rs
examples/: basic.fu  hello.fu  map.fu
src/: main.rs
src/examples/: hello.fu
syntax/: Cargo.toml
syntax/src/: ast.rs  lib.rs  parse.rs  src.rs  token.rs
vm/: Cargo.toml
