[package]
name = "fula-compiler"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fula-syntax = { path = "../syntax" }
fula-vm = { path = "../vm" }
